<resources>
    <string name="app_name">My Day</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="new_task">New Task</string>
    <string name="new_group">New Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="summary">Summary</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="favorite_first">Favorite First</string>
    <string name="font_size">Font Size</string>
    <string name="task_automatically_saves_on_exit">Task will be automatically saved on exit</string>
    <string name="group_automatically_saves_on_exit">Group will be automatically saved on exit</string>
    <string name="name">Name</string>
    <string name="clear_every_day">Clear Every Day</string>
    <string name="uncheck_tasks_on_new_day">Uncheck Tasks On New Day</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="custom">Custom</string>
    <string name="about">About</string>
    <string name="copyright">Developed by: Nazar Suhovich</string>
    <string name="rate_app">Rate App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="source_code">Source Code</string>
    <string name="design_by_johnyvino_uplabs">Design by: Johnyvino (UpLabs)</string>
    <string name="more_apps">More Apps</string>
    <string name="icons_from_flaticon_com">Icons from: flaticon.com</string>
    <string name="delete_this_task_">Delete this task?</string>
    <string name="yes">Yes, delete</string>
    <string name="delete_this_group_">Delete this group?</string>
    <string name="there_is_no_groups_go_to_settings_to_add_one">There is no groups. Go to Settings to add one.</string>
    <string name="use_button_to_create_new_group">Use + button to create new group.</string>
    <string name="you_complete_all_your_tasks">You complete all your tasks.</string>
    <string name="backup">Backup</string>
    <string name="google_drive">Google Drive</string>
    <string name="failed_to_login_to_drive">Failed to login to Google Drive</string>
    <string name="please_wait">Please wait...</string>
    <string name="local">Local</string>
    <string name="group_channel">Group notification channel</string>
    <string name="default_group_notifications">Default channel</string>
    <string name="aa">Aa</string>
    <string name="no_tasks">No tasks</string>
    <string name="notification_on_boot">Notification On Boot</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="web_site">Web site</string>
</resources>
