<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="?colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/new_group"
            android:textColor="?colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin"
            android:layout_marginEnd="@dimen/material_margin"
            android:background="@null"
            android:fontFamily="@font/oswald_regular"
            android:gravity="start"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="32"
            android:maxLines="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorGreyLight"
            android:textColorHint="@color/colorGreyLight"
            android:textSize="24sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin"
            android:layout_marginEnd="@dimen/material_margin">

            <LinearLayout
                android:id="@+id/colorSwitchContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/bannerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/material_margin"
            android:background="@drawable/group_banner_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="1dp"
                android:fontFamily="@font/oswald_medium"
                android:padding="8dp"
                android:text="@string/group_automatically_saves_on_exit"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_clear_black" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:tint="?colorPrimary"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_arrow_back_white" />
</RelativeLayout>